--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,275 @@
-template-repository (1.0-1) unstable; urgency=medium
+golang-github-klauspost-cpuid (2.2.8-1) unstable; urgency=medium
 
-  * Initial release
+  * Team upload
+  * New upstream release
+  * Update Standards-Version to 4.7.0 in d/control (no changes needed)
 
- -- Tsic404 <liuheng@deepin.org>  Sat, 28 Jan 2023 13:46:49 +0800
+ -- Mathias Gibbens <gibmat@debian.org>  Fri, 21 Jun 2024 19:37:34 +0000
+
+golang-github-klauspost-cpuid (2.2.7-1) unstable; urgency=medium
+
+  * Team upload
+  * New upstream release
+  * Update years in d/copyright
+
+ -- Mathias Gibbens <gibmat@debian.org>  Fri, 08 Mar 2024 16:13:52 +0000
+
+golang-github-klauspost-cpuid (2.2.6-1) unstable; urgency=medium
+
+  * Team upload
+  * New upstream release
+
+ -- Mathias Gibbens <gibmat@debian.org>  Sat, 11 Nov 2023 20:59:08 +0000
+
+golang-github-klauspost-cpuid (2.2.5-1) unstable; urgency=medium
+
+  * Team upload
+  * New upstream release
+
+ -- Mathias Gibbens <gibmat@debian.org>  Sat, 17 Jun 2023 17:15:33 +0000
+
+golang-github-klauspost-cpuid (2.2.3-1) unstable; urgency=medium
+
+  * Team upload
+  * New upstream release
+  * Refresh d/copyright
+
+ -- Mathias Gibbens <gibmat@debian.org>  Sun, 08 Jan 2023 02:01:37 +0000
+
+golang-github-klauspost-cpuid (2.2.2-1) unstable; urgency=medium
+
+  * Team upload
+  * New upstream release
+  * Bump Standards-Version in d/control (no changes needed)
+
+ -- Mathias Gibbens <gibmat@debian.org>  Fri, 23 Dec 2022 21:48:34 +0000
+
+golang-github-klauspost-cpuid (2.2.1-1) unstable; urgency=medium
+
+  * Team upload
+  * New upstream release
+
+ -- Mathias Gibbens <gibmat@debian.org>  Sat, 03 Dec 2022 16:56:56 +0000
+
+golang-github-klauspost-cpuid (2.2.0-2) unstable; urgency=medium
+
+  [ Debian Janitor ]
+  * Apply multi-arch hints. + golang-github-klauspost-cpuid-dev: Add Multi-Arch: foreign.
+
+ -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 25 Nov 2022 23:30:51 +0000
+
+golang-github-klauspost-cpuid (2.2.0-1) unstable; urgency=medium
+
+  * Team upload
+
+  [ Aloïs Micard ]
+  * update debian/gitlab-ci.yml (using pkg-go-tools/ci-config)
+
+  [ Mathias Gibbens ]
+  * New upstream release
+  * d/control:
+    - Update Section to golang
+    - Bump Standards-Version (no changes needed)
+    - Update Build-Depends and Depends
+  * Add myself to d/copyright
+  * Remove unknown field "Homepage" from d/upstream/metadata
+
+ -- Mathias Gibbens <gibmat@debian.org>  Fri, 11 Nov 2022 23:18:29 +0000
+
+golang-github-klauspost-cpuid (2.0.6-2) unstable; urgency=medium
+
+  [ Peymaneh Nejad ]
+  * d/control: fix Go import path
+
+  [ Roger Shimizu ]
+  * debian/copyright:
+    - Remove "Files-Excluded", since folder private/ does not exist
+      anymore, so no need to do this repack.
+
+ -- Roger Shimizu <rosh@debian.org>  Thu, 23 Sep 2021 02:22:56 +0900
+
+golang-github-klauspost-cpuid (2.0.6-1) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Roger Shimizu <rosh@debian.org>  Mon, 16 Aug 2021 23:45:41 +0900
+
+golang-github-klauspost-cpuid (2.0.6-1~exp0) experimental; urgency=medium
+
+  * Team upload
+  * debian/watch:
+    - update to version=4
+  * New upstream version 2.0.6
+  * debian/control:
+    - update standards-version, debhelper-compat
+  * debian/rules:
+    - exclude /usr/bin/cpuid from build
+
+ -- Peymaneh Nejad <p.nejad@posteo.de>  Tue, 13 Jul 2021 11:59:34 +0200
+
+golang-github-klauspost-cpuid (1.3.1+ds-1) unstable; urgency=medium
+
+  * New upstream release v1.3.1
+    - Disable ARM feature detection.
+
+ -- Roger Shimizu <rosh@debian.org>  Mon, 06 Jul 2020 20:09:39 +0900
+
+golang-github-klauspost-cpuid (1.3.0+ds-1) unstable; urgency=medium
+
+  * New upstream release v1.3.0
+    - Add ARM CPU features.
+  * debian/watch:
+    - Shorten the repacksuffix for debian version.
+
+ -- Roger Shimizu <rosh@debian.org>  Sat, 04 Jul 2020 22:24:08 +0900
+
+golang-github-klauspost-cpuid (1.2.5+dfsg1-1) unstable; urgency=medium
+
+  * New upstream release v1.2.5
+    - Add raw vendor string.
+
+ -- Roger Shimizu <rosh@debian.org>  Sat, 30 May 2020 14:22:43 +0900
+
+golang-github-klauspost-cpuid (1.2.4+dfsg1-2) unstable; urgency=medium
+
+  [ Roger Shimizu ]
+  * debian/rules:
+    - Do not ship the testdata again.
+
+  [ Debian Janitor ]
+  * Set upstream metadata fields: Bug-Submit.
+
+ -- Roger Shimizu <rosh@debian.org>  Sat, 09 May 2020 19:24:28 +0900
+
+golang-github-klauspost-cpuid (1.2.4+dfsg1-1) unstable; urgency=medium
+
+  * New upstream release v1.2.4
+    - Add clock frequency determination.
+    - Add AMD Tweaks.
+  * debian/rules:
+    - Include the test data.
+
+ -- Roger Shimizu <rosh@debian.org>  Mon, 04 May 2020 18:18:48 +0900
+
+golang-github-klauspost-cpuid (1.2.3+dfsg1-1) unstable; urgency=medium
+
+  * New upstream release v1.2.3
+    - Add VMX detection.
+    - Add AVX512-VNNI detection.
+    - Add SGX Launch Control.
+    - SGX EPC memory size detection support.
+    - Detect CPUID flag 7 features (AVX512)
+    - Fix SGX tests.
+  * debian/control:
+    - Bump debhelper version to 12.
+    - Bump policy version to 4.5.0
+    - Add myself as uploader.
+  * Add debian/upstream/metadata
+
+ -- Roger Shimizu <rosh@debian.org>  Tue, 21 Apr 2020 00:09:18 +0900
+
+golang-github-klauspost-cpuid (1.2.1+dfsg1-3) unstable; urgency=medium
+
+  * Team upload.
+  * Remove myself from uploaders.
+
+ -- Alexandre Viau <aviau@debian.org>  Sun, 15 Sep 2019 18:23:33 -0400
+
+golang-github-klauspost-cpuid (1.2.1+dfsg1-2) unstable; urgency=medium
+
+  * Team upload.
+  * Reupload with source only.
+
+ -- Roger Shimizu <rogershimizu@gmail.com>  Fri, 30 Aug 2019 23:57:49 +0900
+
+golang-github-klauspost-cpuid (1.2.1+dfsg1-1) unstable; urgency=medium
+
+  * Team upload.
+  * New upstream release v1.2.1
+    - New CPU Vendor/VM support: Bhyve, Hygon.
+  * debian/patches: Remove backported patch.
+  * debian/copyright: Use secure URL.
+
+ -- Roger Shimizu <rogershimizu@gmail.com>  Thu, 22 Aug 2019 01:43:32 +0900
+
+golang-github-klauspost-cpuid (1.2.0+dfsg1-1) unstable; urgency=medium
+
+  * Team upload.
+  * New upstream release v1.2.0
+    - Add IBPB, STIBP detection.
+  * debian/patches: Backport from upstream.
+    - [c640019] Fix TSX test information.
+
+ -- Roger Shimizu <rogershimizu@gmail.com>  Wed, 09 Jan 2019 21:43:21 +0200
+
+golang-github-klauspost-cpuid (1.1+dfsg1-4) unstable; urgency=medium
+
+  * Team upload.
+  * Vcs-* urls: pkg-go-team -> go-team.
+
+ -- Alexandre Viau <aviau@debian.org>  Mon, 05 Feb 2018 23:38:59 -0500
+
+golang-github-klauspost-cpuid (1.1+dfsg1-3) unstable; urgency=medium
+
+  * point Vcs-* urls to salsa.d.o subproject
+
+ -- Alexandre Viau <aviau@debian.org>  Thu, 25 Jan 2018 16:20:45 -0500
+
+golang-github-klauspost-cpuid (1.1+dfsg1-2) unstable; urgency=medium
+
+  * Move to salsa.debian.org.
+  * Priority extra -> optional.
+
+ -- Alexandre Viau <aviau@debian.org>  Sat, 30 Dec 2017 02:53:44 -0500
+
+golang-github-klauspost-cpuid (1.1+dfsg1-1) unstable; urgency=medium
+
+  * d/copyright: Files-Excluded: private/*
+
+ -- Alexandre Viau <aviau@debian.org>  Wed, 02 Aug 2017 17:42:34 -0400
+
+golang-github-klauspost-cpuid (1.1-1) unstable; urgency=medium
+
+  * New upstream snapshot.
+  * Bump Standards-Version to 4.0.0.
+  * Set Testsuite to autopkgtest-pkg-go.
+
+ -- Alexandre Viau <aviau@debian.org>  Wed, 02 Aug 2017 17:28:52 -0400
+
+golang-github-klauspost-cpuid (1.0-2) unstable; urgency=medium
+
+  * Team upload.
+  * Upload to unstable.
+
+ -- Roger Shimizu <rogershimizu@gmail.com>  Fri, 30 Jun 2017 23:00:41 +0900
+
+golang-github-klauspost-cpuid (1.0-2~exp1) experimental; urgency=medium
+
+  * Team upload.
+
+  [ Tim Potter ]
+  * debian/control:
+    - Add me to uploaders.
+
+  [ Roger Shimizu ]
+  * debian/control:
+    - Build-Depends golang-any, instead of golang-go.
+    - Depends golang-any, instead of golang-go.
+  * debian/docs:
+    - Add README.md
+
+ -- Roger Shimizu <rogershimizu@gmail.com>  Fri, 12 May 2017 22:03:58 +0900
+
+golang-github-klauspost-cpuid (1.0-1) unstable; urgency=medium
+
+  * New upstream version
+  * Replaced Vcs-Git by secure (https) url
+  * Bumped Standards-Version to 3.9.7
+
+ -- Alexandre Viau <aviau@debian.org>  Mon, 21 Mar 2016 15:59:20 -0400
+
+golang-github-klauspost-cpuid (0.0~git20151214.0.ef30b90-1) unstable; urgency=medium
+
+  * Initial release (Closes: #807947)
+
+ -- Alexandre Viau <aviau@debian.org>  Mon, 14 Dec 2015 11:54:26 -0500
